--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1 id="heading">STOPWATCH</h1>
         <span id="time">00:00</span>   
         <div id="buttons">
-        <button type="button" style="display: block; width: 15vw;" class="btn btn-success">Success</button>
+        <button type="button" style="display: block; width: 15vw;" class="btn btn-success">Start</button>
         <button type="button" style="display: block; width: 15vw" class="btn btn-danger">Stop</button>
         <button type="button" style="display: block; width: 15vw" class="btn btn-info">Reset</button>
     </div> 
